--- a/Contact.html
+++ b/Contact.html
@@ -1,10 +1,10 @@
 <h3>Contact Me Here:</h3>
 <ul>
   <li>
-    aaafrin@stats.com
+    aaafrin@abc.com
     </li>
     <li>
-      +91 9731167504
+      +91 9999991112
       </li>
       <li>
         Bangalore
